[package]
edition = "2018"
readme = "README.md"
name = "demo-stm32f429-nucleo"
version = "0.1.0"

[features]
default = ["standalone"]
standalone = ["itm", "stm32f4"]
itm = ["panic-itm", "kern/klog-itm"]
semihosting = ["panic-semihosting", "kern/klog-semihosting"]

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
panic-itm = { version = "0.4.1", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }

[dependencies.stm32f4]
features = ["stm32f429", "rt"]
version = "0.13.0"
optional = true

[dependencies.stm32f4xx-hal]
version = ">=0.10.1"
features = ["rt", "stm32f429"]

[dependencies.kern]
path = "../../sys/kern"
default-features = false

# this lets you use `cargo fix`!
[[bin]]
name = "demo-stm32f429-nucleo"
test = false
bench = false
