[package]
name = "drv-stm32fx-gpio"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
zerocopy = "0.6.1"
byteorder = { version = "1.3.4", default-features = false }
num-traits = { version = "0.2.12", default-features = false }
drv-stm32fx-rcc-api = {path = "../stm32fx-rcc-api", default-features = false }
stm32f4 = { version = "0.13.0", default-features = false }
cortex-m = { version = "0.7", features = ["inline-asm"] }

[features]
default = ["standalone"]
standalone = ["f429"]
f429 = ["stm32f4/stm32f429", "drv-stm32fx-rcc-api/f429"]
f407 = ["stm32f4/stm32f407", "drv-stm32fx-rcc-api/f407"]

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-stm32fx-gpio"
test = false
bench = false
