[package]
name = "drv-stm32fx-usart"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
stm32f3 = { version = "0.13.2", features = ["stm32f303"], optional = true }
stm32f4 = { version = "0.13.0", default-features = false }
drv-stm32fx-gpio-api = {path = "../stm32fx-gpio-api", optional = true}
drv-stm32fx-rcc-api = {path = "../stm32fx-rcc-api", default-features = false }
zerocopy = "0.6.1"

num-traits = { version = "0.2.12", default-features = false }
cfg-if = "0.1.10"

[build-dependencies]
build-util = {path = "../../build/util"}

[features]
default = ["standalone"]
standalone = ["f429"]
f429 = ["stm32f4/stm32f429", "drv-stm32fx-rcc-api/f429", "drv-stm32fx-gpio-api"]
f407 = ["stm32f4/stm32f407", "drv-stm32fx-rcc-api/f407", "drv-stm32fx-gpio-api"]


# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-stm32fx-usart"
test = false
bench = false
